crates/bayou_frontend/src/parser/snapshots/bayou_frontend__parser__tests__missing_paren.snap
---
source: crates/bayou_frontend/src/parser/tests.rs
info: "func main( { return 0; }"
---
- items:
    - FuncDecl:
        name:
          ident: 1
          span:
            start: 5
            end: 9
        ret_ty: Void
        statements:
          - Return:
              kind:
                Constant: 0
              span:
                start: 20
                end: 21
- - expected: "`)`"
    span:
      start: 11
      end: 12

