crates/bayou_frontend/src/parser/snapshots/bayou_frontend__parser__tests__no_semicolon.snap
---
source: crates/bayou_frontend/src/parser/tests.rs
info: "func main() -> i64 { return 0 }"
---
- items:
    - FuncDecl:
        name:
          ident: 1
          span:
            start: 5
            end: 9
        ret_ty: I64
        statements:
          - Return:
              kind:
                Constant: 0
              span:
                start: 28
                end: 29
- - expected: "`;`"
    span:
      start: 30
      end: 31

