crates/bayou_frontend/src/parser/snapshots/bayou_frontend__parser__tests__no_semicolon_or_return_value.snap
---
source: crates/bayou_frontend/src/parser/tests.rs
info: "func main() -> i64 { return }"
---
- items:
    - FuncDecl:
        ident:
          istr: 1
          span:
            start: 5
            end: 9
        ret_ty: I64
        block:
          statements:
            - Return:
                kind: Void
                span:
                  start: 21
                  end: 27
          final_expr:
            kind: Void
            span:
              start: 28
              end: 29
- - expected: "`;`"
    span:
      start: 28
      end: 29
