crates/bayou_frontend/src/parser/snapshots/bayou_frontend__parser__tests__no_space.snap
---
source: crates/bayou_frontend/src/parser/tests.rs
info: "func main() -> i64 { return0; }"
---
- items:
    - FuncDecl:
        ident:
          ident_str: 1
          span:
            start: 5
            end: 9
        ret_ty: I64
        statements:
          - ParseError
- - expected: a statement
    span:
      start: 21
      end: 28

