crates/bayou_frontend/src/parser/snapshots/bayou_frontend__parser__tests__wrong_case.snap
---
source: crates/bayou_frontend/src/parser/tests.rs
info: "func main() -> i64 { RETURN 0; }"
---
- items:
    - ParseError
- - expected: "`}`"
    span:
      start: 28
      end: 29
  - expected: an item
    span:
      start: 28
      end: 29
  - expected: an item
    span:
      start: 31
      end: 32
